# asteroids-game

./: .gitignore  CMakeLists.txt  asteroids-workspace.code-workspace  helloworld.cpp
dat/shaders/: fragment-text.glsl  fragment.glsl  vertex.glsl
include/: buttonwidget.hpp  containerwidget.hpp  filehelper.h  input.hpp  renderer2d.hpp  shader.hpp  shaderprogram.hpp  sprite.hpp  texture.hpp  widget.hpp
include/freetype-gl/: opengl.h
include/glad/: glad.h
learning/cmake/: basic-overview.md
learning/opengl/: basic-overview.md  pipeline-overview.md
src/: buttonwidget.cpp  containerwidget.cpp  filehelper.cpp  glad.c  input.cpp  main.cpp  renderer2d.cpp  shader.cpp  shaderprogram.cpp  sprite.cpp  texture.cpp  widget.cpp
